--- a/src/body/body.sass
+++ b/src/body/body.sass
@@ -24,7 +24,7 @@
         letter-spacing: 0.8px
         text-align: center
     .sale2
-        color: #82cbff
+        color: #239ef6
         font-size: 15px
         // font-weight: bold
         letter-spacing: 0.8px
