--- a/src/footer/footer.sass
+++ b/src/footer/footer.sass
@@ -8,7 +8,7 @@
     justify-content: center
     width: 100%
     color: #e7e7e7
-    background-image: linear-gradient(to right ,#4a9fff ,#4a9fff)
+    background-image: linear-gradient(to right ,#4a9fff ,#0062D3)
 .ag_footer
     img
         width: 150px
